MULE-10129: Change code formatter (#3116)